parser/parser.output
Terminals unused in grammar

    TOKEN_WHILE
    TOKEN_DO
    TOKEN_PLUS
    TOKEN_MINUS
    TOKEN_MUL
    TOKEN_DIV
    TOKEN_NOT_EQUAL
    TOKEN_GREATER
    TOKEN_GREATER_EQUAL
    TOKEN_LESS
    TOKEN_LESS_EQUAL
    TOKEN_INCREMENT
    TOKEN_DECREMENT
    TOKEN_ADD_WITH
    TOKEN_SUB_WITH
    TOKEN_MUL_WITH
    TOKEN_DIV_WITH
    TOKEN_COLON
    TOKEN_ERROR


State 88 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    8 decl_list: decl decl_list
    9          | ε

   10 stmt: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
   11     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt TOKEN_ELSE stmt
   12     | TOKEN_FOR TOKEN_LPAREN expr_list TOKEN_SEMI expr TOKEN_SEMI expr_list TOKEN_RPAREN stmt
   13     | TOKEN_LCRBR stmt_list TOKEN_RCRBR
   14     | decl
   15     | expr TOKEN_SEMI
   16     | TOKEN_GIVE expr TOKEN_SEMI

   17 stmt_list: stmt stmt_list
   18          | ε

   19 term: name
   20     | TOKEN_INTEGER_LITERAL
   21     | TOKEN_FLOATING_POINT_LITERAL
   22     | TOKEN_NOT term
   23     | TOKEN_LPAREN expr TOKEN_RPAREN

   24 expr: expr TOKEN_EQUAL term
   25     | name TOKEN_ASSIGN term
   26     | name TOKEN_LPAREN expr_list TOKEN_RPAREN
   27     | term

   28 expr_list: expr next_expr
   29          | ε

   30 next_expr: TOKEN_COMMA expr_list
   31          | ε

   32 name: TOKEN_IDENT

   33 string_literal: TOKEN_STRING_LITERAL

   34 allocation_size: TOKEN_INTEGER_LITERAL
   35                | TOKEN_UNKNOWN

   36 parameter: name TOKEN_LSQBR type TOKEN_RSQBR

   37 parameters: parameter list_of_parameters
   38           | ε

   39 list_of_parameters: TOKEN_COMMA parameters
   40                   | ε

   41 type: TOKEN_INT
   42     | TOKEN_CHAR
   43     | TOKEN_BOOL
   44     | TOKEN_FLOAT
   45     | TOKEN_VOID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ALLOCATE (258) 4 5 6
    TOKEN_NOT (259) 22
    TOKEN_UNKNOWN (260) 35
    TOKEN_GIVE (261) 16
    TOKEN_IF (262) 10 11
    TOKEN_ELSE (263) 11
    TOKEN_WHILE (264)
    TOKEN_FOR (265) 12
    TOKEN_DO (266)
    TOKEN_CHAR (267) 42
    TOKEN_INT (268) 41
    TOKEN_FLOAT (269) 44
    TOKEN_BOOL (270) 43
    TOKEN_VOID (271) 45
    TOKEN_INTEGER_LITERAL (272) 20 34
    TOKEN_FLOATING_POINT_LITERAL (273) 21
    TOKEN_IDENT (274) 32
    TOKEN_STRING_LITERAL (275) 33
    TOKEN_PLUS (276)
    TOKEN_MINUS (277)
    TOKEN_MUL (278)
    TOKEN_DIV (279)
    TOKEN_ASSIGN (280) 3 5 6 25
    TOKEN_EQUAL (281) 24
    TOKEN_NOT_EQUAL (282)
    TOKEN_GREATER (283)
    TOKEN_GREATER_EQUAL (284)
    TOKEN_LESS (285)
    TOKEN_LESS_EQUAL (286)
    TOKEN_INCREMENT (287)
    TOKEN_DECREMENT (288)
    TOKEN_ADD_WITH (289)
    TOKEN_SUB_WITH (290)
    TOKEN_MUL_WITH (291)
    TOKEN_DIV_WITH (292)
    TOKEN_LPAREN (293) 7 10 11 12 23 26
    TOKEN_RPAREN (294) 7 10 11 12 23 26
    TOKEN_LCRBR (295) 6 7 13
    TOKEN_RCRBR (296) 6 7 13
    TOKEN_LSQBR (297) 2 3 4 5 6 7 36
    TOKEN_RSQBR (298) 2 3 4 5 6 7 36
    TOKEN_COMMA (299) 30 39
    TOKEN_COLON (300)
    TOKEN_SEMI (301) 2 3 4 5 6 12 15 16
    TOKEN_ERROR (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program <decl> (49)
        on left: 1
        on right: 0
    decl <decl> (50)
        on left: 2 3 4 5 6 7
        on right: 8 14
    decl_list <decl> (51)
        on left: 8 9
        on right: 1 8
    stmt <stmt> (52)
        on left: 10 11 12 13 14 15 16
        on right: 10 11 12 17
    stmt_list <stmt> (53)
        on left: 17 18
        on right: 7 13 17
    term <expr> (54)
        on left: 19 20 21 22 23
        on right: 22 24 25 27
    expr <expr> (55)
        on left: 24 25 26 27
        on right: 3 10 11 12 15 16 23 24 28
    expr_list <expr> (56)
        on left: 28 29
        on right: 6 12 26 30
    next_expr <expr> (57)
        on left: 30 31
        on right: 28
    name <name> (58)
        on left: 32
        on right: 2 3 4 5 6 7 19 25 26 36
    string_literal <name> (59)
        on left: 33
        on right: 5
    allocation_size <integer> (60)
        on left: 34 35
        on right: 4 5 6
    parameter <params> (61)
        on left: 36
        on right: 37
    parameters <params> (62)
        on left: 37 38
        on right: 7 39
    list_of_parameters <params> (63)
        on left: 39 40
        on right: 37
    type <type> (64)
        on left: 41 42 43 44 45
        on right: 2 3 4 5 6 7 36


State 0

    0 $accept: • program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 9 (decl_list)

    program    go to state 2
    decl       go to state 3
    decl_list  go to state 4
    name       go to state 5


State 1

   32 name: TOKEN_IDENT •

    $default  reduce using rule 32 (name)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    8 decl_list: decl • decl_list

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 9 (decl_list)

    decl       go to state 3
    decl_list  go to state 7
    name       go to state 5


State 4

    1 program: decl_list •

    $default  reduce using rule 1 (program)


State 5

    2 decl: name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI
    3     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_LSQBR  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    8 decl_list: decl decl_list •

    $default  reduce using rule 8 (decl_list)


State 8

    2 decl: name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_CHAR   shift, and go to state 9
    TOKEN_INT    shift, and go to state 10
    TOKEN_FLOAT  shift, and go to state 11
    TOKEN_BOOL   shift, and go to state 12
    TOKEN_VOID   shift, and go to state 13

    type  go to state 14


State 9

   42 type: TOKEN_CHAR •

    $default  reduce using rule 42 (type)


State 10

   41 type: TOKEN_INT •

    $default  reduce using rule 41 (type)


State 11

   44 type: TOKEN_FLOAT •

    $default  reduce using rule 44 (type)


State 12

   43 type: TOKEN_BOOL •

    $default  reduce using rule 43 (type)


State 13

   45 type: TOKEN_VOID •

    $default  reduce using rule 45 (type)


State 14

    2 decl: name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_RSQBR  shift, and go to state 15


State 15

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_SEMI
    3     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_ALLOCATE  shift, and go to state 16
    TOKEN_ASSIGN    shift, and go to state 17
    TOKEN_LPAREN    shift, and go to state 18
    TOKEN_SEMI      shift, and go to state 19


State 16

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_UNKNOWN          shift, and go to state 20
    TOKEN_INTEGER_LITERAL  shift, and go to state 21

    allocation_size  go to state 22


State 17

    3 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN • expr TOKEN_SEMI

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    term  go to state 27
    expr  go to state 28
    name  go to state 29


State 18

    7 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN • parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 38 (parameters)

    name        go to state 30
    parameter   go to state 31
    parameters  go to state 32


State 19

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI •

    $default  reduce using rule 2 (decl)


State 20

   35 allocation_size: TOKEN_UNKNOWN •

    $default  reduce using rule 35 (allocation_size)


State 21

   34 allocation_size: TOKEN_INTEGER_LITERAL •

    $default  reduce using rule 34 (allocation_size)


State 22

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_ASSIGN  shift, and go to state 33
    TOKEN_SEMI    shift, and go to state 34


State 23

   22 term: TOKEN_NOT • term

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    term  go to state 35
    name  go to state 36


State 24

   20 term: TOKEN_INTEGER_LITERAL •

    $default  reduce using rule 20 (term)


State 25

   21 term: TOKEN_FLOATING_POINT_LITERAL •

    $default  reduce using rule 21 (term)


State 26

   23 term: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    term  go to state 27
    expr  go to state 37
    name  go to state 29


State 27

   27 expr: term •

    $default  reduce using rule 27 (expr)


State 28

    3 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr • TOKEN_SEMI
   24 expr: expr • TOKEN_EQUAL term

    TOKEN_EQUAL  shift, and go to state 38
    TOKEN_SEMI   shift, and go to state 39


State 29

   19 term: name •
   25 expr: name • TOKEN_ASSIGN term
   26     | name • TOKEN_LPAREN expr_list TOKEN_RPAREN

    TOKEN_ASSIGN  shift, and go to state 40
    TOKEN_LPAREN  shift, and go to state 41

    $default  reduce using rule 19 (term)


State 30

   36 parameter: name • TOKEN_LSQBR type TOKEN_RSQBR

    TOKEN_LSQBR  shift, and go to state 42


State 31

   37 parameters: parameter • list_of_parameters

    TOKEN_COMMA  shift, and go to state 43

    $default  reduce using rule 40 (list_of_parameters)

    list_of_parameters  go to state 44


State 32

    7 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters • TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_RPAREN  shift, and go to state 45


State 33

    5 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN • string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN • TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_STRING_LITERAL  shift, and go to state 46
    TOKEN_LCRBR           shift, and go to state 47

    string_literal  go to state 48


State 34

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI •

    $default  reduce using rule 4 (decl)


State 35

   22 term: TOKEN_NOT term •

    $default  reduce using rule 22 (term)


State 36

   19 term: name •

    $default  reduce using rule 19 (term)


State 37

   23 term: TOKEN_LPAREN expr • TOKEN_RPAREN
   24 expr: expr • TOKEN_EQUAL term

    TOKEN_EQUAL   shift, and go to state 38
    TOKEN_RPAREN  shift, and go to state 49


State 38

   24 expr: expr TOKEN_EQUAL • term

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    term  go to state 50
    name  go to state 36


State 39

    3 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI •

    $default  reduce using rule 3 (decl)


State 40

   25 expr: name TOKEN_ASSIGN • term

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    term  go to state 51
    name  go to state 36


State 41

   26 expr: name TOKEN_LPAREN • expr_list TOKEN_RPAREN

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    $default  reduce using rule 29 (expr_list)

    term       go to state 27
    expr       go to state 52
    expr_list  go to state 53
    name       go to state 29


State 42

   36 parameter: name TOKEN_LSQBR • type TOKEN_RSQBR

    TOKEN_CHAR   shift, and go to state 9
    TOKEN_INT    shift, and go to state 10
    TOKEN_FLOAT  shift, and go to state 11
    TOKEN_BOOL   shift, and go to state 12
    TOKEN_VOID   shift, and go to state 13

    type  go to state 54


State 43

   39 list_of_parameters: TOKEN_COMMA • parameters

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 38 (parameters)

    name        go to state 30
    parameter   go to state 31
    parameters  go to state 55


State 44

   37 parameters: parameter list_of_parameters •

    $default  reduce using rule 37 (parameters)


State 45

    7 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN • TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_LCRBR  shift, and go to state 56


State 46

   33 string_literal: TOKEN_STRING_LITERAL •

    $default  reduce using rule 33 (string_literal)


State 47

    6 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR • expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_INTEGER_LITERAL         shift, and go to state 24
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 25
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_LPAREN                  shift, and go to state 26

    $default  reduce using rule 29 (expr_list)

    term       go to state 27
    expr       go to state 52
    expr_list  go to state 57
    name       go to state 29


State 48

    5 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal • TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 58


State 49

   23 term: TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 23 (term)


State 50

   24 expr: expr TOKEN_EQUAL term •

    $default  reduce using rule 24 (expr)


State 51

   25 expr: name TOKEN_ASSIGN term •

    $default  reduce using rule 25 (expr)


State 52

   24 expr: expr • TOKEN_EQUAL term
   28 expr_list: expr • next_expr

    TOKEN_EQUAL  shift, and go to state 38
    TOKEN_COMMA  shift, and go to state 59

    $default  reduce using rule 31 (next_expr)

    next_expr  go to state 60


State 53

   26 expr: name TOKEN_LPAREN expr_list • TOKEN_RPAREN
